# volinga-model

./: README.md  pyproject.toml  volinga-repo-installer.bat
Volinga/: pyproject.toml
Volinga/volinga/: volinga_config.py  volinga_render.py
volinga/: volinga_base_config.py  volinga_camerapaths.py  volinga_config.py  volinga_trainer.py  volinga_viewer.py
