[project]
name="volinga"
version="0.2.0"

dependencies=[
    "nerfstudio==0.3.3",
    "torchtyping"
]

[tool.setuptools.packages.find]
include = ["volinga*"]

[project.entry-points.'nerfstudio.method_configs']
volinga = 'volinga.volinga_config:volinga_method'

[project.scripts]
volinga-preview = 'volinga.volinga_render:entrypoint'
